fixed white space on mobile view

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -235,6 +235,11 @@ html {
   overflow: hidden;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 header nav {
   display: -webkit-box;
   display: -ms-flexbox;
